Closed
Bug 82645
Opened 25 years ago
Closed 25 years ago
Sending a web page while offline generate 2 messages in the unsent folder
Categories
(MailNews Core :: Composition, defect, P2)
MailNews Core
Composition
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.1
People
(Reporter: bugzilla, Assigned: bugzilla)
Details
(Whiteboard: [nsbeta1+])
Attachments
(2 files)
|
868 bytes,
patch
|
Details | Diff | Splinter Review | |
|
1.13 KB,
patch
|
Details | Diff | Splinter Review |
I am working offline. I create a message and attach a web page. When I sen the
message (Send Later), I get an alert telling me there is a problem with the
remote attachment and asking if I want to continue without it. If I say yes, two
messages will be created into the unsent message!
Expected result, should be only one message without attachment.
| Assignee | ||
Comment 1•25 years ago
|
||
nominating nsbeta1. I think is bad that potentially we send twice the same
message!
Status: NEW → ASSIGNED
Keywords: nsbeta1
Comment 2•25 years ago
|
||
marking nsbeta1+. Putting into 0.9.2 because I don't think attaching a web page
will be too common, but if you can get a fix soon I'd like to consider this for
0.9.1
Priority: -- → P2
Whiteboard: [nsbeta1+]
Target Milestone: --- → mozilla0.9.2
| Assignee | ||
Comment 3•25 years ago
|
||
| Assignee | ||
Comment 5•25 years ago
|
||
| Assignee | ||
Updated•25 years ago
|
Whiteboard: [nsbeta1+] → [nsbeta1+] Have fix
| Assignee | ||
Comment 6•25 years ago
|
||
This is a simple fix:
In nsMsgComposeAndSend::HackAttachments, we should not call GatherMimeAttachments ourself if we call
SnarfAttachment as SnarfAttachment will call indirectly (synchronously or asynchronously)
GatherMimeAttachments.
This problem wasn't showing up until recently because nsIURILoader::OpenURI was not calling the onStopRequest
function of the listener synchronously, even when we were offline. This is not the case anymore.
Comment 7•25 years ago
|
||
putting on 0.9.1 radar. Please just make sure that attaching things besides web
pages works online and offline.
Target Milestone: mozilla0.9.2 → mozilla0.9.1
Updated•25 years ago
|
Whiteboard: [nsbeta1+] Have fix → [nsbeta1+] Have fix,need r=,sr=
Updated•25 years ago
|
Whiteboard: [nsbeta1+] Have fix,need r=,sr= → wanted for 0.9.1 [nsbeta1+] Have fix, has r=, needs sr= and a=
Comment 9•25 years ago
|
||
is it really right to ignore m_pendingAttachment count? Not that I know the
first thing about that code...
Comment 10•25 years ago
|
||
Put another way, is there a reason you're not checking that pending attachment
count anymore?
| Assignee | ||
Comment 11•25 years ago
|
||
Yes, needToCallGatherMimeAttachments replace the old logic that was using
m_pendingAttachment. The goal is to call GatherMimeAttachments when we are done
fetching remote attachment or if we don't have remote attachment. In the case we
have remote attachment, we will call snarfAttachment which will call
GatherMimeAttachments itself when done. In this case, I set
needToCallGatherMimeAttachments to false to avoid calling GatherMimeAttachments
a second time.
Comment 12•25 years ago
|
||
ok, r=bienvenu
| Assignee | ||
Comment 13•25 years ago
|
||
thanks, seeking approval now...
Whiteboard: wanted for 0.9.1 [nsbeta1+] Have fix, has r=, needs sr= and a= → wanted for 0.9.1 [nsbeta1+] Have fix, needs a=
Comment 14•25 years ago
|
||
a= asa@mozilla.org for checkin to 0.9.1 (on behalf of drivers)
| Assignee | ||
Comment 15•25 years ago
|
||
fixed and checked in
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Whiteboard: wanted for 0.9.1 [nsbeta1+] Have fix, needs a= → [nsbeta1+]
Comment 16•25 years ago
|
||
OK using may31 commercial trunk builds: linux rh6.2, mac OS 9.0, win98
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•