Fix for bug 82645. We should avoid to call GatherMimeAttachments in the case we call SnarfAttachment as this last one will call itself the first one. R=varada, SR=bienvenu, A=asa